attempt at fixing scrollbar issue (Firefox)

--- a/src/base/popup/popup.css
+++ b/src/base/popup/popup.css
@@ -6,6 +6,7 @@ body {
     padding: 5px;
     float: left; /* resizes body element for Firefox */
     background-color: white;
+    overflow: hidden;   /* avoid scrollbars in Firefox 33.0 and later */
 }
 
 a {
